# at-chat

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  deploy-rust.sh  elm-pkg-js-includes.js  elm.json  head.html  override.sh  package-lock.json  package.json  run-ngrok.sh  todo.md
benchmarks/: run.js  (+1 more)
rust-server/: Cargo.toml  flake.nix
rust-server/iomrascalai/: Cargo.toml
rust-server/iomrascalai/src/: lib.rs
rust-server/iomrascalai/src/board/: hypotheticals.rs  mod.rs  reading.rs
rust-server/iomrascalai/src/board/chain/: mod.rs
rust-server/iomrascalai/src/board/coord/: mod.rs
rust-server/iomrascalai/src/board/movement/: mod.rs
rust-server/iomrascalai/src/config/: mod.rs
rust-server/iomrascalai/src/engine/: mod.rs
rust-server/iomrascalai/src/engine/controller/: mod.rs
rust-server/iomrascalai/src/engine/node/: mod.rs
rust-server/iomrascalai/src/engine/prior/: mod.rs
rust-server/iomrascalai/src/engine/worker/: mod.rs
rust-server/iomrascalai/src/game/: mod.rs
rust-server/iomrascalai/src/game/zobrist_hash_table/: mod.rs
rust-server/iomrascalai/src/ownership/: mod.rs
rust-server/iomrascalai/src/patterns/small/: mod.rs
rust-server/iomrascalai/src/patterns/small/pattern/: mod.rs
rust-server/iomrascalai/src/patterns/small/point/: mod.rs
rust-server/iomrascalai/src/playout/: mod.rs
rust-server/iomrascalai/src/ruleset/: mod.rs
rust-server/iomrascalai/src/score/: mod.rs  territory.rs
rust-server/iomrascalai/src/score/final_score/: mod.rs
rust-server/iomrascalai/src/timer/: mod.rs
rust-server/src/: content_types.rs  go.rs  main.rs
(+10982 files in other folders)
