[package]
name = "rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
fs = "0.0.5"
gufo-common = "1.0.1"
gufo-exif = "0.3.0"
gufo-jpeg = "0.3.0"
http = "1.3.1"
image = "0.25.8"
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
vapid = "0.6.0"
web-push = "0.11.0"
